--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="normal_padding">16dp</dimen>
+
+    <dimen name="layout_left_padding">4dp</dimen>
+    <dimen name="button_size">48dp</dimen>
+    <dimen name="button_margin">8dp</dimen>
 </resources>
